commit de pureba

--- a/index.html
+++ b/index.html
@@ -15,9 +15,33 @@
     <link rel="stylesheet" type="text/css" href="/styles.css" >
   </head>
   <body>
-  <header>
-    <h1>Registro</h1>
+    <header>
+    <a href="#"><img src="./img/—Pngtree—letter a logo png_7471429.png" id="toplogo"></a>
+    <h1 id="hTitle"><a href="#">Academia Virtual</a></h1>
+
+    <div class="clock">
+      <h1 id="time">00:00:00</h1>
+      <p id="date">date</p>
+    </div>
+
   </header>
+
+    <nav id="hMenu">
+      <ul id="menuList">
+          <li><a href="#">Conocenos</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Egresados</a></li>
+          <li><a href="#">Libro de visitas</a></li>
+          <li><a href="#">Contacto</a></li>
+          <li><a href="#">Estudiantes</a></li>
+
+      </ul>
+    </nav>
+    
+  
+  <br>
+
+  <h1 id="h1T">Registro</h1>
       <form id="form">
         <input class="input" type="text" id="inputNS" placeholder="Nombre completo" />
         <input class="input" type="number" id="g1" placeholder="Primera nota">
@@ -47,18 +71,37 @@
       </div>
 
       </div>
+
       <div id="box">
       <div class="users">
         <h2 id="title3">Algunos de nuestros egresados</h2>
         <ul id="users"></ul>
       </div>
     </div>
+
       <footer>
-        <div>
-          <h3>Proyecto final por: Manuel Salazar</h3>
-          <p>Comision: 43125</p>
+
+        <div id="f1">
+          <h3>Proyecto por: Manuel Salazar</h3>
+          <p>Front End Developer</p>
         </div>
+
+        <div id="f2">
+          <div id="fBox">
+          <a href=""><img src="./img/Black bubble icons/facebook.png" title="fb"></a>
+          <a href=""><img src="./img/Black bubble icons/twitter.png" title="x"></a>
+          <a href="#"><img src="./img/Black bubble icons/instagram.png" title="ig"></a>
+          <a href="#"><img src="./img/Black bubble icons/linkedin.png" title="lk"></a>
+          <a href="#"><img src="./img/Black bubble icons/github.png" title="gt"></a>
+        </div>
+        </div>
+
+        <div id="f3">
+          <p>Gracias por su visita</p>
+        </div>
+
       </footer>
+      <br id="brF">
     <script src="./main.js"></script>
   </body>
 </html
