--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Luxon-->
     <script src="https://cdn.jsdelivr.net/npm/luxon@3.3.0/build/global/luxon.min.js"></script>
     
-    <title>Proyecto final </title>
+    <title>Hola Mundo!</title>
     <link rel="stylesheet" type="text/css" href="/styles.css" >
   </head>
   <body>
